{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "DefaultPlayer",
            "id": "1315ef76-373c-4bf0-8946-82f45120441b",
            "actions": [
                {
                    "name": "Move",
                    "id": "e5be64d7-9c86-4430-8a7a-21f0b40a81fe",
                    "expectedControlLayout": "Vector2",
                    "continuous": true,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Look",
                    "id": "66034a5a-9191-44f2-908e-69da1b654bc6",
                    "expectedControlLayout": "Vector2",
                    "continuous": true,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Jump",
                    "id": "9d825581-1083-4e3f-b626-c044fdf6bfd6",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Shoot",
                    "id": "101858a2-80b1-4bd9-9dfa-3e95ea487d13",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Dash",
                    "id": "68a28e0b-3487-499e-903e-5ca03dfc1d24",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "NextWeapon",
                    "id": "008f353d-a3e1-47c7-9bf2-61ffe0bfcf92",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "PreviousWeapon",
                    "id": "023f6850-5376-4d8e-a6bc-01f76c4c667a",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "ActionButton",
                    "id": "ddb268df-29ff-416f-a70d-8eaba08fb0d4",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "JumpRelease",
                    "id": "31317b04-f1af-4d49-9e47-a603d362a03c",
                    "expectedControlLayout": "Button",
                    "continuous": false,
                    "passThrough": false,
                    "initialStateCheck": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "Controller",
                    "id": "2726e293-ec2f-4ae9-a97e-0f378715b9c0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "Up",
                    "id": "fc9ff925-59c3-4593-8769-df3f289d0251",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControlScheme",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Down",
                    "id": "3b22e00e-4d8b-4ad6-8d82-6a289a639f39",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControlScheme",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Left",
                    "id": "d2320445-19ba-4b10-9161-6c96404fb80b",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControlScheme",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Right",
                    "id": "2b0cd934-0039-4231-8201-4df7bea56255",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControlScheme",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Keyboard",
                    "id": "41c6d4ed-c01a-444d-bdfc-6259ab9ad65c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "Up",
                    "id": "f366c2b6-83b0-45c3-a632-dd95d2f2117a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerKeyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Down",
                    "id": "03455ec8-3785-4f4a-afb7-dc5fa87f1ca6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerKeyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Left",
                    "id": "49fd3e7c-af37-440e-a9d9-b114a731d071",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerKeyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "Right",
                    "id": "038a81db-bbf0-473a-a890-6e43d6b7b0de",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerKeyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "11f4311f-dff4-4525-9837-daec6d0b3922",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PlayerControlScheme",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "3feea424-8ad7-4f4b-9dad-0d59804f6492",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PlayerKeyboard",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "876f6729-d7a9-471b-9aff-0b5eddd7a429",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PlayerControlScheme",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "f59d7703-55bc-4dea-ae3d-32dfe6f5e969",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PlayerKeyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "568ed54b-2b9c-4c1f-99fa-e4c8c7b6b6fb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";PlayerKeyboard",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "486016ae-90df-4463-8be9-5293693e501a",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PlayerControlScheme",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "1208b803-c060-42ad-8fa0-15aefdc32f28",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PlayerKeyboard",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "a5d08f7e-4113-4e77-b971-65ffde674582",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PlayerControlScheme",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "5d772c7a-3883-46e2-b7aa-b90be1106930",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PlayerKeyboard",
                    "action": "NextWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "67bbc93d-6a9f-4a18-96ef-bc7f4d4d676a",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PlayerControlScheme",
                    "action": "NextWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "d5dac03c-394c-4566-b9eb-bd865bd35989",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PlayerKeyboard",
                    "action": "PreviousWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "e6909db6-59c0-4ba6-8a2b-3103f4fe78b8",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PlayerControlScheme",
                    "action": "PreviousWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "b33640a0-9cd1-467a-be5a-bb188dbc989d",
                    "path": "<Keyboard>/f",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PlayerKeyboard",
                    "action": "ActionButton",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "e9818651-f9d0-4117-b02e-3fdf184f9227",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";PlayerControlScheme",
                    "action": "ActionButton",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "a6558f24-c9d7-4aa5-9a22-73fc5535f4e6",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": ";PlayerControlScheme",
                    "action": "JumpRelease",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "id": "a66faca7-eee0-4fe0-8fa0-b785a5957a55",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": ";PlayerKeyboard",
                    "action": "JumpRelease",
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerController",
            "basedOn": "",
            "bindingGroup": "PlayerControlScheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "PlayerKeyboard",
            "basedOn": "",
            "bindingGroup": "PlayerKeyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}